# foton

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  codecov.yml  deny.toml  release.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/instructions/: copilot-review.instructions.md
.github/workflows/: cd.yml  ci.yml
scripts/: build-dist
src/: install.rs  main.rs
src/cli/: args.rs  config.rs  context.rs  message.rs  mod.rs
src/command/: info.rs  list.rs  mod.rs  uninstall.rs
src/command/common/: mod.rs
src/command/common/steps/: database.rs  db_resolve.rs  mod.rs  uninstall.rs
src/command/install/: mod.rs
src/command/install/helpers/: database.rs  mod.rs  package_dirs.rs  registration.rs
src/command/install/steps/: download.rs  extract.rs  mod.rs  registration.rs  resolve.rs  validate.rs
src/db/: database.rs  lock.rs  mod.rs  persist.rs
src/db/persist/: mod.rs  v1.rs
src/package/: dirs.rs  id.rs  manifest.rs  mod.rs  name.rs  namespace.rs  qualified_name.rs  spec.rs  state.rs  version.rs
src/platform/: mod.rs
src/platform/windows/: com.rs  direct_write.rs  font_info.rs  font_inspector.rs  font_validator.rs  install.rs  mod.rs  registry.rs  session.rs
src/platform/windows/primitives/: font_inspector.rs  mod.rs  property_store.rs  registry.rs
src/platform/windows/services/: font.rs  mod.rs  registration.rs
src/platform/windows/steps/: mod.rs  registration.rs  unregistration.rs
src/registry/: mod.rs
src/util/: app_dirs.rs  error.rs  fs.rs  hash.rs  mod.rs  reporter.rs  testing.rs
src/util/path/: absolute_path.rs  file_name.rs  mod.rs
xtask/: Cargo.toml  README.md
xtask/assets/: sandbox.wsb.template
xtask/scripts/: bootstrap.ps1
xtask/src/: bootstrap.rs  env_util.rs  fs_util.rs  main.rs  process_util.rs  report.rs  sandbox.rs
xtask/src/scenario/: help_check.rs  mod.rs  smoke_test.rs
xtask/src/util/: build.rs  env.rs  fs.rs  mod.rs  process.rs
