[workspace]
members = [ "xtask" ]

[package]
name = "foton"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Manage fonts as packages. Install and update directly from GitHub Releases."
readme = "README.md"
repository = "https://github.com/gifnksm/foton"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
crates-io = true
rust-version = true
github-actions = { workflows = "ci.yml" }
codecov = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_complete_nushell = "4.6"
clap_mangen = "0.3"

[dev-dependencies]
[build-dependencies]

[profile.release]
strip = true

[badges]
maintenance = { status = "actively-developed" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Restriction group
allow_attributes = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
doc_paragraphs_missing_punctuation = "warn"
error_impl_error = "warn"
filetype_is_file = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
map_err_ignore = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_self_imports = "warn"
unused_trait_names = "warn"
verbose_file_reads = "warn"

[workspace.lints.rust]
absolute-paths-not-starting-with-crate = "warn"
deprecated-in-future = "warn"
elided-lifetimes-in-paths = "warn"
macro-use-extern-crate = "warn"
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
redundant-lifetimes = "warn"
unused-extern-crates = "warn"
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused-qualifications = "warn"
