[workspace]
members = [ "xtask" ]

[package]
name = "foton"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
description = "Manage fonts as packages on Windows using versioned manifests and GitHub Releases."
readme = "README.md"
repository = "https://github.com/gifnksm/foton"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
crates-io = true
rust-version = true
github-actions = { workflows = "ci.yml" }
codecov = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
bytes = "1.11.1"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_complete_nushell = "4.6"
clap_mangen = "0.3"
color-eyre = "0.6.5"
config = "0.15.22"
console = "0.16.3"
derive_more = { version = "2.1.1", features = ["display", "error", "from", "is_variant"] }
directories = "6.0.0"
fd-lock = "4.0.4"
futures-core = "0.3.32"
futures-util = "0.3.32"
glob = "0.3.3"
indicatif = "0.18.4"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["stream"] }
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
sha2 = "0.11.0"
spdx = "0.13.4"
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["fs", "rt-multi-thread", "signal"] }
tokio-util = "0.7.18"
toml = "1.1.2"
url = { version = "2.5.8", features = ["serde"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_DirectWrite", "Win32_Graphics_Gdi", "Win32_Storage_EnhancedStorage", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Shell_PropertiesSystem", "Win32_UI_WindowsAndMessaging"] }
windows-core = "0.62.2"
windows-registry = "0.6.1"
windows-result = "0.4.1"
zip = "8.6.0"

[profile.release]
strip = true

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
tokio = { version = "1.52.1", features = ["macros"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Restriction group
allow_attributes = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
doc_paragraphs_missing_punctuation = "warn"
error_impl_error = "warn"
filetype_is_file = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
map_err_ignore = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_self_imports = "warn"
unused_trait_names = "warn"
verbose_file_reads = "warn"

[workspace.lints.rust]
absolute-paths-not-starting-with-crate = "warn"
deprecated-in-future = "warn"
elided-lifetimes-in-paths = "warn"
macro-use-extern-crate = "warn"
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
redundant-lifetimes = "warn"
unused-extern-crates = "warn"
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused-qualifications = "warn"
