[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cargo_metadata = "0.23.1"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
derive_more = { version = "2.1.1", features = ["display"] }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wsbx = "0.1.0"

[lints]
workspace = true
